--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
       pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
       required
     />
-<input type="text" id="valorTotal" name="valor" placeholder="Valor total" readonly />
+<input type="text" id="valorTotal" name="valorExibido" placeholder="Valor total" />
 <input type="hidden" id="valorNumerico" name="valor" />
 
 
