--- a/disponivel.html
+++ b/disponivel.html
@@ -67,6 +67,39 @@
       font-weight: bold;
       color: #800;
     }
+.btn-volver {
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    display: inline-flex;
+    align-items: center;
+    gap: 8px;
+    background-color: #1976d2;
+    color: white;
+    padding: 10px 16px;
+    border-radius: 8px;
+    text-decoration: none;
+    font-size: 15px;
+    font-weight: bold;
+    box-shadow: 0 4px 8px rgba(25, 118, 210, 0.2);
+    z-index: 1000;
+    transition: background-color 0.3s ease, transform 0.1s ease;
+}
+
+.btn-volver:hover {
+    background-color: #1565c0;
+    transform: scale(1.03);
+}
+
+.btn-volver:active {
+    transform: scale(0.98);
+}
+
+.btn-volver .icon {
+    width: 18px;
+    height: 18px;
+    stroke: white;
+}
 
     @media (max-width: 600px) {
       .form-container {
@@ -82,11 +115,29 @@
       .horarios .horario {
         width: 80%;
       }
+      .btn-volver {
+        padding: 8px 12px;
+        font-size: 13px;
+        gap: 6px;
+    }
+
+    .btn-volver .icon {
+        width: 15px;
+        height: 15px;
+    }
     }
   </style>
 </head>
 <body>
-  <h2>Ver Horarios Disponibles</h2>
+  <a href="index.html" class="btn-volver" title="Volver al panel">
+  <svg xmlns="http://www.w3.org/2000/svg" class="icon" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7" />
+  </svg>
+  Volver
+</a>
+  <h1>Consulta de Horarios Disponibles</h1>
+  <p>Seleccione una cancha y una fecha para ver los horarios disponibles.</p>
+ 
 
   <label>Cancha:
     <select id="cancha" name="cancha" required>
